demo-config/namespaces/demo/anthos-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: demo
  name: demo
  annotations:
    demo: "true"
    istio.io/rev: asm-1112-17
