demo-config/namespaces/demo/demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: demo
  name: demo
  annotations:
    demo: "true"
