demo-config/namespaces/demo/anthos-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: anthos-demo
  name: anthos-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anthos-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: anthos-demo
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/anthos-hub-1635687135/demoapp-repo/anthos-demoapp
        name: anthos-demoapp
        resources: {}
status: {}
