demo-config/namespaces/demo/anthos-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: anthos-demo
  name: anthos-demo
  namespace: demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: anthos-demo
  sessionAffinity: None
  type: ClusterIP
