demo-config/namespaces/demo/anthos-demo-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: anthos-demo-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: anthos-demo-vs
spec:
  hosts:
  - "*"
  gateways:
  - anthos-demo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: anthos-demo
        port:
          number: 8080
