demo-config/namespaces/demo/anthos-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: demo-ingress
 namespace: demo
 annotations:
   # If the class annotation is not specified it defaults to "gce".
   kubernetes.io/ingress.class: "gce"
   configsync.gke.io/cluster-name-selector: cluster-1    
spec:
 rules:
 - http:
     paths:
     - path: /*
       pathType: ImplementationSpecific
       backend:
         service:
           name: anthos-demo
           port:
             number: 8080
